--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,7 +1,9 @@
 global:
-  scrape_interval: 1m
+  scrape_interval: 15s
+  evaluation_interval: 15s
 
 scrape_configs:
   - job_name: 'node'
+    scrape_interval: 5s
     static_configs:
       - targets: ['node-exporter:9100']
